--- a/index.html
+++ b/index.html
@@ -1,37 +1,3 @@
-Skip to content
-Search or jump to…
-
-Pull requests
-Issues
-Marketplace
-Explore
- 
-@rahulpaul01 
-Learn Git and GitHub without any code!
-Using the Hello World guide, you’ll start a branch, write comments, and open a pull request.
-
-
-GuanqiaoDing
-/
-html-css-js-coursera
-0
-222
-Code
-Issues
-Pull requests
-Actions
-Projects
-Wiki
-Security
-Insights
-html-css-js-coursera/module3_solution/index.html
-@GuanqiaoDing
-GuanqiaoDing Repeat with new version of Bootstrap
-Latest commit 9135583 on Nov 17, 2018
- History
- 1 contributor
-145 lines (138 sloc)  6.25 KB
-  
 <!doctype html>
 <html lang="en">
 
@@ -41,7 +7,7 @@ Latest commit 9135583 on Nov 17, 2018
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Module 3 Solution</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
-	<link rel="stylesheet" href="css/styles.css">
+	<link rel="stylesheet" href="module3-solution/css/styles.css">
 </head>
 
 <body>
