--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			<div class="container">
 				<div class="navbar-header">
 					<div class="navbar-brand">
-						<a href="index.html">
+						<a href="module3-solution/index.html">
 							<h1>Food, LLC</h1>
 						</a>
 					</div>
