--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 
 					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav"
 					 aria-expanded="false">
+						<span class="sr-only"></span>
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
