--- a/index.html
+++ b/index.html
@@ -3,142 +3,140 @@
 
 <head>
 	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Module 3 Solution</title>
-	<link rel="stylesheet" href="css/styles.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<link rel="stylesheet" href="css/bootstrap.min.css">
+	<link rel="stylesheet" href="css/style.css">
+	<title>Module 3 Assignment</title>
 </head>
 
 <body>
 	<header>
-		<nav id="header-nav" class="navbar navbar-default">
+		<nav id="header-nav" class="navbar navbar-expand-lg navbar-light">
 			<div class="container">
-				<div class="navbar-header">
-					<div class="navbar-brand">
-						<a href="module3-solution/index.html">
-							<h1>Food, LLC</h1>
-						</a>
-					</div>
-
-					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav"
-					 aria-expanded="false">
-						<span class="sr-only"></span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-					</button>
+				<div class="navbar-brand">
+					<a href="index.html">
+						<h1>Food, LLC</h1>
+					</a>
 				</div>
 
-				<div id="collapsable-nav" class="collapse navbar-collapse">
-					<ul id="nav-list" class="nav navbar-nav visible-xs">
-						<li><a href="#chicken" class="text-center">Chicken</a></li>
-						<li><a href="#beef" class="text-center">Beef</a></li>
-						<li><a href="#sushi" class="text-center">Sushi</a></li>
+				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+				 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+
+				<div id="navbarSupportedContent" class="collapse navbar-collapse">
+					<ul id="nav-list" class="navbar-nav mr-auto d-lg-none">
+						<li class="nav-item active">
+							<a class="nav-link text-center" href="#chicken">Chicken</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link text-center" href="#beef">Beef</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link text-center" href="#sushi">Sushi</a>
+						</li>
 					</ul>
 				</div><!-- .collapse .navbar-collapse -->
 			</div><!-- .container -->
-		</nav><!-- #header-nav -->
+		</nav><!-- .navbar-->
 	</header>
 
 	<div id="main-content" class="container">
 		<h2 id="page-title" class="text-center">Our Menu</h2>
-		<section class="row">
-			<div id="main-text" class="col-xs-12">
-				<div class="text-background">
-					<h3 id="chicken">Chicken</h3>
-					<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.
-						Aenean
-						massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
-						Donec
-						quam
-						felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
-						Donec
-						pede
-						justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet
-						a,venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras
-						dapibus.Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula,
-						porttitor
-						eu,
-						consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a,
-						tellus.Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam
-						ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus.
-						Maecenas
-						tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit adipiscing sem neque sed
-						ipsum.
-						Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante
-						tincidunt
-						tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci
-						eget
-						eros
-						faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna.
-						Sed
-						consequat, leo eget bibendum sodales, augue velit cursus nunc.
-					</p>
-					<h3 id="beef">Beef</h3>
-					<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.
-						Aenean
-						massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
-						Donec
-						quam
-						felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
-						Donec
-						pede
-						justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet
-						a,venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras
-						dapibus.Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula,
-						porttitor
-						eu,
-						consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a,
-						tellus.Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam
-						ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus.
-						Maecenas
-						tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit adipiscing sem neque sed
-						ipsum.
-						Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante
-						tincidunt
-						tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci
-						eget
-						eros
-						faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna.
-						Sed
-						consequat, leo eget bibendum sodales, augue velit cursus nunc.
-					</p>
-					<h3 id="sushi">Sushi</h3>
-					<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.
-						Aenean
-						massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
-						Donec
-						quam
-						felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
-						Donec
-						pede
-						justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet
-						a,venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras
-						dapibus.Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula,
-						porttitor
-						eu,
-						consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a,
-						tellus.Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam
-						ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus.
-						Maecenas
-						tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit adipiscing sem neque sed
-						ipsum.
-						Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante
-						tincidunt
-						tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci
-						eget
-						eros
-						faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna.
-						Sed
-						consequat, leo eget bibendum sodales, augue velit cursus nunc.
-					</p>
-				</div>
-			</div>
-		</section>
+		<div id="main-text">
+			<h3 id="chicken">Chicken</h3>
+			<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.
+				Aenean
+				massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+				Donec
+				quam
+				felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
+				Donec
+				pede
+				justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet
+				a,venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras
+				dapibus.Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula,
+				porttitor
+				eu,
+				consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a,
+				tellus.Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam
+				ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus.
+				Maecenas
+				tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit adipiscing sem neque sed
+				ipsum.
+				Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante
+				tincidunt
+				tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci
+				eget
+				eros
+				faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna.
+				Sed
+				consequat, leo eget bibendum sodales, augue velit cursus nunc.
+			</p>
+			<h3 id="beef">Beef</h3>
+			<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.
+				Aenean
+				massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+				Donec
+				quam
+				felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
+				Donec
+				pede
+				justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet
+				a,venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras
+				dapibus.Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula,
+				porttitor
+				eu,
+				consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a,
+				tellus.Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam
+				ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus.
+				Maecenas
+				tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit adipiscing sem neque sed
+				ipsum.
+				Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante
+				tincidunt
+				tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci
+				eget
+				eros
+				faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna.
+				Sed
+				consequat, leo eget bibendum sodales, augue velit cursus nunc.
+			</p>
+			<h3 id="sushi">Sushi</h3>
+			<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.
+				Aenean
+				massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+				Donec
+				quam
+				felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
+				Donec
+				pede
+				justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet
+				a,venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras
+				dapibus.Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula,
+				porttitor
+				eu,
+				consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a,
+				tellus.Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam
+				ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus.
+				Maecenas
+				tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit adipiscing sem neque sed
+				ipsum.
+				Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante
+				tincidunt
+				tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci
+				eget
+				eros
+				faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna.
+				Sed
+				consequat, leo eget bibendum sodales, augue velit cursus nunc.
+			</p>
+		</div>
 	</div>
 
-	<script src="js/jquery-2.1.4.min.js"></script>
+	<script src="js/jquery-3.3.1.js"></script>
 	<script src="js/bootstrap.min.js"></script>
+
 </body>
 
 </html>
